ImageTP2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-image
spec:
  containers:
  - name: docker-image
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
