service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: docker-image
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 8080
